Added git hub repo link to html

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
         </div>
       </div>
     </div>
+    <p class="git-hub-link">
+      <a href="https://github.com/jen-buskohl/weather-app">Open-source code</a>
+      by Jen Buskohl
+    </p>
     <script src="src/index.js"></script>
   </body>
 </html>
